添加shell日志,并取消java优化参数